# pycobertura

./: .coveragerc  .gitignore  .travis.yml  CHANGES.md  LICENSE.txt  README.md  pyproject.toml  pytest.ini  read_setup_cfg.py  release.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: build-and-test-pycobertura.yml
pycobertura/: __init__.py  __main__.py  cli.py  cobertura.py  cobertura1.xml  cobertura2.xml  filesystem.py  merge.py  merge_coverage.py  merged_cobertura.xml  reporters.py  reports.py  utils.py
pycobertura/templates/: filters.py  html-delta.jinja2  html.jinja2  macro.source.jinja2
tests/: .testgitignore  README.generate-dummy-coverage-for-testing.md  cobertura-generated-by-istanbul-from-coffeescript.xml  cobertura-no-branch-rate.xml  cobertura.xml  dummy.original-better-cov.xml  dummy.original-full-cov.xml  dummy.original.xml  dummy.source1.xml  dummy.source2.xml  dummy.with-dummy2-better-and-worse.xml  dummy.with-dummy2-better-cov.xml  dummy.with-dummy2-full-cov.xml  dummy.with-dummy2-no-cov.xml  test_calculate_line_rate.py  test_cli.py  test_cobertura.py  test_cobertura_diff.py  test_colorize.py  test_extrapolate_coverage.py  test_filesystem.py  test_get_line_status.py  test_hunkify_coverage.py  test_imports.py  test_main.py  test_rangify.py  test_reconcile_lines.py  test_regex_utils.py  test_reporters.py  test_reports.py  test_stringify.py  test_utils.py  tests.py  utils.py
tests/dummy/: setup.cfg  test_dummy.py
tests/dummy.diffcoverage/: new-coverage.xml  old-coverage.xml
tests/dummy.linestatus/: test1.xml  test2.xml
tests/dummy.linestatus/dummy/: __init__.py
tests/dummy.moved/: coverage.xml  setup.cfg  test_dummy.py
tests/dummy.moved/dummy/: dummy5.py
tests/dummy.source1/: coverage.xml  test_dummy.py
tests/dummy.source1/dummy/: dummy.py  dummy4.py
tests/dummy.source2/: coverage.xml  test_dummy.py
tests/dummy.source2/dummy/: dummy.py  dummy2.py  dummy3.py
tests/dummy.uncovered/: coverage.xml  test_dummy.py
tests/dummy.uncovered.addcode/: coverage.xml  test_dummy.py
tests/dummy.uncovered.addcode/dummy/: dummy.py
tests/dummy.uncovered/dummy/: dummy.py
tests/dummy.with-branch-condition/: coverage.xml  setup.cfg  test_dummy.py
tests/dummy.with-branch-condition/dummy/: dummy.py
tests/dummy.zeroexit1/: coverage.xml  test_dummy.py
tests/dummy.zeroexit1/dummy/: dummy.py
tests/dummy.zeroexit2/: coverage.xml  test_dummy.py
tests/dummy.zeroexit2/dummy/: dummy.py
