# Documentation of setup.cfg: 
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[tool:pytest]
norecursedirs = build docs/_build *.egg .tox *.venv tests/dummy*
junit_family = xunit1
addopts =
    # Shows a line for every test
    # You probably want to turn this off if you use pytest-sugar.
    # Or you can keep it and run `py.test -q`.
    --verbose

    # Shorter tracebacks are sometimes easier to read
    --tb=short

    # Turn on --capture to have brief, less noisy output.
    # You will only see output if the test fails.
    # Use --capture no (same as -s) if you want to see it all or have problems
    # debugging.
    # --capture=fd
    # --capture=no

    # Show extra test summary info as specified by chars (f)ailed, (E)error, (s)skipped, (x)failed, (X)passed.
    -rfEsxX

    # Output test results to junit.xml for Jenkins to consume
    --junitxml=junit.xml

    # Measure code coverage
    --cov=pycobertura --cov-report=xml --cov-report=term-missing

    # Previous versions included the following, but it's a bad idea because it
    # hard-codes the value and makes it hard to change from the command-line
    tests/

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = pycobertura
version = 2.1.0
description = "A Cobertura coverage parser that can diff reports and show coverage progress."
author = "Alex Conrad"
author_email = "alexandre.conrad@gmail.com"
long_description = long_description
long_description_content_type = 'text/markdown'
maintainer = "Alex Conrad"
maintainer_email = "alexandre.conrad@gmail.com"
license_file = LICENSE
keywords = "cobertura coverage diff report parser parse xml"
url = "https://github.com/aconrad/pycobertura"
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
python_requires = >= 3.7
include_package_data = True
packages = find:
setup_requires =
    setuptools_git
install_requires =
    click>=4.0
    jinja2
    lxml
    tabulate

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    pycobertura = pycobertura.cli:pycobertura