# Documentation of setup.cfg: 
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = pycobertura
version = 3.0.0
description = "A Cobertura coverage parser that can diff reports and show coverage progress."
author = "Alex Conrad"
author_email = "alexandre.conrad@gmail.com"
long_description = file: README.md
long_description_content_type = 'text/markdown'
maintainer = "Alex Conrad"
maintainer_email = "alexandre.conrad@gmail.com"
license_file = LICENSE
keywords = "cobertura coverage diff report parser parse xml"
url = "https://github.com/aconrad/pycobertura"
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
python_requires = >= 3.7
packages = find:
setup_requires =
    setuptools_git
install_requires =
    click>=4.0
    jinja2
    lxml
    tabulate
    ruamel.yaml

[options.package_data]
* = *.jinja2, *.css

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    pycobertura = pycobertura.cli:pycobertura
